--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_gemini: ^2.0.4
+  image_picker: ^1.1.2
+  dash_chat_2: ^0.0.21
 
 dev_dependencies:
   flutter_test:
