--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  flutter_gemini: ^2.0.4
+  flutter_gemini:
   image_picker: ^1.1.2
   dash_chat_2: ^0.0.21
+  speech_to_text: ^6.6.2
 
 dev_dependencies:
   flutter_test:
