--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker: ^1.1.2
   dash_chat_2: ^0.0.21
   speech_to_text: ^6.6.2
+  google_generative_ai: ^0.4.3
 
 dev_dependencies:
   flutter_test:
