--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   google_sign_in: ^6.2.1
   url_launcher: ^6.3.0
+  flutter_blue_plus: ^1.32.11
 
 dev_dependencies:
   flutter_test:
