--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_gemini:
   google_generative_ai: ^0.4.3
+  camera: ^0.11.0+1
 
 dev_dependencies:
   flutter_test:
