--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_generative_ai: ^0.4.3
   camera: ^0.11.0+1
   flutter_blue_plus: ^1.32.11
+  flutter_blue_classic: ^0.0.3
 
 dev_dependencies:
   flutter_test:
