--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_blue_plus: ^1.32.11
   flutter_blue_classic: ^0.0.3
+  firebase_storage: ^12.1.3
 
 dev_dependencies:
   flutter_test:
