--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_blue_plus: ^1.32.11
   flutter_blue_classic: ^0.0.3
   firebase_storage: ^12.1.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
